--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "embla-carousel-react": "^8.0.0",
+    "exceljs": "^4.4.0",
     "framer-motion": "^11.0.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
